--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="">    
-    <title>Document</title>
+    <title>Tened</title>
 
     <!--PRELOADS-->
     <link rel="preload" href="css/style.css" as="style">
@@ -16,6 +16,7 @@
     
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     
     <!--JAVASCRIPT-->
     <script src="js/script.js" type="text/javascript"></script>
@@ -24,7 +25,11 @@
 
 </head>
 <body>
+    <div onmouseleave="exitIntent()" class="container">
     Contagem Regressiva:
     <p id="contador"></p>
+    <span id="span"></span>
+    </div>
+
 </body>
 </html>
