previa_index_Barbara

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="preload" href="js/script.js" as="script">
 
     <!--FONTES-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet"/>
 
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
@@ -40,21 +41,26 @@
 
 <body>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-            </div>
+   <div class="container-fluid px-0">
+      <div class="bg container-fluid">
+        <div class="row col-md-12">
+          <div class="col-md-12 ml-5 mt-5">
+            <img src="imagens/logo-tened-branco-roxo.png" class="logo" alt="Logotipo Tened">
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-md-6 ml-5">
+            <h1 class="display-1">Educação básica privada e a inovação</h1>
+          </div>
+            <div class="col-md-offset-6"></div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-            </div>
-            <div class="col-md-6">
-            </div>
+          <div class="col-md-6 ml-5">
+            <p class="h4">Como se preparar para a transformação digital e seus impactos na educação básica privada</p>
+          </div>
+            <div class="col-md-offset-6"></div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-            </div>
-        </div>
+      </div>
         <div class="row">
             <div class="col-md-4">
             </div>
