"pop up exit intent"

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <!--JAVASCRIPT-->
     <script src="js/script.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!--PIXELS-->
 
@@ -70,6 +71,18 @@
                     <p id="contador"></p>
                     <span id="span"></span>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="lightbox" id="text">
+        <div class="box">
+            <a class="close" href="#">X</a>
+            <!-- your title -->
+            <div class="content">
+                <img src="imagens/logo-tened-transp-roxo.png" class="img-fluid logoPop">
+
+
             </div>
         </div>
     </div>
