--- a/index.html
+++ b/index.html
@@ -61,16 +61,73 @@
             <div class="col-md-offset-6"></div>
         </div>
       </div>
-        <div class="row">
-            <div class="col-md-4">
-            </div>
-            <div class="col-md-4">
-            </div>
-            <div class="col-md-4">
+         <div class="row">
+            <div class="col-md-12" id="bglinha">
+                <h2 id="conheca">Conheça o projeto TENED, nossa missão é incentivar a discussão sobre educação disruptiva, 
+                compartilhando informações sobre tendências para a educação privada no Brasil, promovendo 
+                o desenvolvimento de habilidades digitais e a criatividade</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" id="bglinha">
+                <h2 id="nossaequipe">Nossa equipe</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4" id="bglinha">
+                <div id="quadrado">
+                    <img src="imagens/Luiz Otávio.jpeg" alt="Avatar" id="imagemavatar">
+                    <h2 id="avatar1">Luiz Otávio Nhimi</h2>
+                    <h3 id="txtavatar1">Facilitação e experiência</h3>
+                </div>
+            </div>
+            <div class="col-md-4" id="bglinha">
+                <div id="quadrado">
+                    <img src="imagens/Luiz Otávio.jpeg" alt="Avatar" id="imagemavatar">
+                    <h2 id="avatar1">Luiz Otávio Nhimi</h2>
+                    <h3 id="txtavatar1">Facilitação e experiência</h3>
+                </div>
+            </div>
+            <div class="col-md-4" id="bglinha">
+                <div id="quadrado">
+                    <img src="imagens/Luiz Otávio.jpeg" alt="Avatar" id="imagemavatar">
+                    <h2 id="avatar1">Luiz Otávio Nhimi</h2>
+                    <h3 id="txtavatar1">Facilitação e experiência</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="bglinha">
+                <div id="quadradoform">
+                    <h2 id="conheca">Somos motivados pela inovação e você é nosso 
+                        convidado para participar do webinar Caminhos da Educação. 
+                    </h2>
+                    <h2 id="nossaequipe">Inscreva-se aqui!
+                    </h2>
+                    
+            <form role="form" method="POST" action="https://smtl.gama.academy/leads/bfdfc7e0-b7e1-11ea-8228-89cff86db9a0"> 
+          
+                <div class="form-group">
+                  <div>
+                    <input name="name" type="text" class="form-control11" id="nome1" placeholder="Nome e Sobrenome*"
+                    pattern="^\D{2,}\s[\D\s]{2,}$" required style="color: black;"/>
+                  </div>
+  
+                  <div>
+                    <input name="email" type="email" class="form-control22" id="exampleInputEmail1" placeholder="E-mail*"
+                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required style="color: black;"/>
+                  </div>
+                </div>
+  
+                <input name="redirectTo" type="hidden" value="https://maratonandosuaserie.com/Tnkspage-apx-serie.html" />
+                <input type="submit" id="button" value="QUERO PARTICIPAR!"/>	
+  
+              </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="bglinha">
                 <div onmouseleave="exitIntent()" class="container">
                     Contagem Regressiva:
                     <p id="contador"></p>
@@ -79,6 +136,22 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
