add background na row 6
add background na row 6

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="col-md-6 ml-5">
             <p class="h4">Como se preparar para a transformação digital e seus impactos na educação básica privada</p>
           </div>
-            <div class="col-md-offset-6"></div>
+            <div class="col-md-offset-6" id="bglinha"></div>
         </div>
       </div>
          <div class="row">
