--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <body>
 
    <div class="container-fluid px-0">
-      <div class="bg container-fluid">
-        <div class="row col-md-12">
-          <div class="col-md-12 ml-5 mt-5">
+      <div class="bg container-fluid" >
+        <div class="row col-md-12" >
+          <div class="col-md-12 ml-5 mt-5" >
             <img src="imagens/logo-tened-branco-roxo.png" class="logo" alt="Logotipo Tened">
           </div>
         </div>
@@ -55,8 +55,10 @@
             <div class="col-md-offset-6"></div>
         </div>
         <div class="row">
-          <div class="col-md-6 ml-5">
-            <p class="h4">Como se preparar para a transformação digital e seus impactos na educação básica privada</p>
+          <div class="col-md-6 ml-5" >
+            <p class="h4">Como se preparar para a transformação digital e seus impactos na
+                 educação básica privada</p>
+                 
           </div>
             <div class="col-md-offset-6" id="bglinha"></div>
         </div>
@@ -76,21 +78,21 @@
         <div class="row">
             <div class="col-md-4" id="bglinha">
                 <div id="quadrado">
-                    <img src="imagens/Luiz Otávio.jpeg" alt="Avatar" id="imagemavatar">
-                    <h2 id="avatar1">Luiz Otávio Nhimi</h2>
-                    <h3 id="txtavatar1">Facilitação e experiência</h3>
+                    <img src="images/Juliane.png" alt="Avatar" id="imagemavatar">
+                    <h2 id="avatar1">Juliane</h2>
+                    <h3 id="txtavatar1">Empoderamento e Tecnologia</h3>
                 </div>
             </div>
             <div class="col-md-4" id="bglinha">
                 <div id="quadrado">
-                    <img src="imagens/Luiz Otávio.jpeg" alt="Avatar" id="imagemavatar">
-                    <h2 id="avatar1">Luiz Otávio Nhimi</h2>
-                    <h3 id="txtavatar1">Facilitação e experiência</h3>
+                    <img src="images/Luiz-Otávio.jpeg" alt="Avatar" id="imagemavatar">
+                    <h2 id="avatar1">John Lemos</h2>
+                    <h3 id="txtavatar1">Inovação e meio ambiente</h3>
                 </div>
             </div>
             <div class="col-md-4" id="bglinha">
                 <div id="quadrado">
-                    <img src="imagens/Luiz Otávio.jpeg" alt="Avatar" id="imagemavatar">
+                    <img src="images/Luiz-Otávio.jpeg" alt="Avatar" id="imagemavatar">
                     <h2 id="avatar1">Luiz Otávio Nhimi</h2>
                     <h3 id="txtavatar1">Facilitação e experiência</h3>
                 </div>
@@ -126,15 +128,14 @@
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-12" id="bglinha">
-                <div onmouseleave="exitIntent()" class="container">
-                    Contagem Regressiva:
-                    <p id="contador"></p>
-                    <span id="span"></span>
-                </div>
+                <h2 id="direitos">Todos os direitos reservados</h2>
             </div>
         </div>
+
+
     </div>
 
 
@@ -155,3 +156,4 @@
 </body>
 
 </html>
+
