--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   </div>
                 </div>
   
-                <input name="redirectTo" type="hidden" value="https://maratonandosuaserie.com/Tnkspage-apx-serie.html" />
+                <input name="redirectTo" type="hidden" value="https://tened.co/https://tened.co/typage.html" />
                 <input type="submit" id="button" value="QUERO PARTICIPAR!"/>	
   
               </form>
