--- a/typage.html
+++ b/typage.html
@@ -30,8 +30,8 @@
 
 </head>
 
-<body id="bodyty">
-    <div class="container-fluid" style="background-image: url('imagens/bg-homepage-desktop-roxo-1440x1024px.jpg')">
+<body >
+    <div class="bg container-fluid">
         
         <div class="row">
             <div class="col-md-12" id="logoty">
