add google fonte

--- a/typage.html
+++ b/typage.html
@@ -18,6 +18,7 @@
     <link rel="preload" href="js/script.js" as="script">
 
     <!--FONTES-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet"/>
 
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
