--- a/index.html
+++ b/index.html
@@ -43,27 +43,28 @@
 <body>
 
    <div alt="fundo com garoto segurando binóculos" class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
-      <div class="bg container-fluid mx-auto" >
-        <div class="row col-md-12" >
-          <div class="col-md-12 ml-5 mt-5 mx-auto" >
+      <div class="bg container-sm|md|lg|xl container-fluid mx-auto" >
+        <div class="container-sm|md|lg|xl container-fluid" >
+          <div class="container-sm|md|lg|xl container-fluid col-md-12 ml-5 mt-5 mx-auto float-left" >
             <!--LOGO TENED--><img alt="logo Tened" src="imagens/logo-tened-branco-roxo.png" class="logo" alt="Logotipo Tened">
           </div>
         </div>
-        <div class="row mt-5 mx-auto">
-          <div class="col-md-6 ml-5 mx-auto">
+        <div class="container-sm|md|lg|xl container-fluid mx-auto">
+          <div class="container-sm|md|lg|xl container-fluid mx-auto">
+              <br><br><br>
             <h1 class="display-1">Educação básica privada e a inovação</h1>
           </div>
-            <div class="col-md-offset-6 mx-auto"></div>
+            <div class="container-sm|md|lg|xl container-fluid col-md-offset-6 mx-auto"></div>
         </div>
-        <div class="row mx-auto">
-          <div class="col-md-6 ml-5 mx-auto" >
-            <p class="h4">Como se preparar para a transformação digital e seus impactos na
-                 educação básica privada</p>     
+        <div class="container-sm|md|lg|xl container-fluid mx-auto">
+          <div class="container-sm|md|lg|xl container-fluid mx-auto" >
+            <h3 id="h3">Como se preparar para a transformação digital e seus impactos na
+                 educação básica privada</h3>     
           </div>
         </div>
       </div>
-         <div class="row mx-auto" >
-            <div class="col-md-12 mx-auto" id="bglinha">
+         <div class="container-sm|md|lg|xl container-fluid row mx-auto" >
+            <div class="container-sm|md|lg|xl container-fluid col-md-12 mx-auto" id="bglinha">
                 <div class="container-sm|md|lg|xl text-left container-fluid p-4"><h2 id="conheca">Conheça o projeto TENED, nossa missão é incentivar a discussão sobre educação disruptiva, 
                 compartilhando informações sobre tendências para a educação privada no Brasil, promovendo 
                 o desenvolvimento de habilidades digitais e a criatividade</h2></div>
@@ -111,10 +112,12 @@
             
                         <div class="form-group">
                         <div>
+                            <label alt="preencher nome" for="nome1"></label>
                             <input name="name" type="text" class="form-control11" id="nome1" placeholder="Nome e Sobrenome*"required style="color: black;"/>
                         </div>
         
                         <div>
+                            <label alt="preencher email" for="exampleInputEmail1"></label>
                             <input name="email" type="email" class="form-control22" id="exampleInputEmail1" placeholder="E-mail*"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,}$" required style="color: black;"/>
                         </div>
