--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </div>
         <div class="container-sm|md|lg|xl container-fluid mx-auto">
           <div class="container-sm|md|lg|xl container-fluid mx-auto" >
-            <h3 id="h3">Como se preparar para a transformação digital e seus impactos na
-                 educação básica privada</h3>     
+            <p id="h4">Como se preparar para a transformação digital e seus impactos na
+                 educação básica privada</p>     
           </div>
         </div>
       </div>
@@ -112,12 +112,12 @@
             
                         <div class="form-group">
                         <div>
-                            <label alt="preencher nome" for="nome1"></label>
+                            <label alt="preencher nome" for="nome1" type="label"></label>
                             <input name="name" type="text" class="form-control11" id="nome1" placeholder="Nome e Sobrenome*"required style="color: black;"/>
                         </div>
         
                         <div>
-                            <label alt="preencher email" for="exampleInputEmail1"></label>
+                            <label alt="preencher email" for="exampleInputEmail1" type="label"></label>
                             <input name="email" type="email" class="form-control22" id="exampleInputEmail1" placeholder="E-mail*"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,}$" required style="color: black;"/>
                         </div>
