ajuste de layut mobile

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <body>
 
-   <div alt="fundo com garoto segurando binóculos" class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
-      <div class="bg container-sm|md|lg|xl container-fluid mx-auto" >
+   <div class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
+      <div alt="fundo com garoto segurando binóculos" class="bg container-sm|md|lg|xl container-fluid mx-auto" >
         <div class="container-sm|md|lg|xl container-fluid" >
           <div class="container-sm|md|lg|xl container-fluid col-md-12 ml-5 mt-5 mx-auto float-left" >
             <!--LOGO TENED--><img alt="logo Tened" src="imagens/logo-tened-branco-roxo.png" class="logo" alt="Logotipo Tened">
