ajuste de layut mobile

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="col-md-4" id="bglinha">
                 <div id="quadrado">
                     <!--FOTO JULIANE--><img alt="foto da colaboradora Juliane" src="images/Juliane.png" alt="Avatar" id="imagemavatar">
-                    <h2 id="avatar1">Juliane</h2>
+                    <h2 id="avatar1">Juliane Pires</h2>
                     <h3 id="txtavatar1">Empoderamento e Tecnologia</h3>
                 </div>
             </div>
