exclusão da pasta imagens / correção dos códigos

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div alt="fundo com garoto segurando binóculos" class="bg container-sm|md|lg|xl container-fluid mx-auto" >
             <div class="container-sm|md|lg|xl container-fluid" >
             <div class="container-sm|md|lg|xl container-fluid col-md-12 ml-5 mt-5 mx-auto float-left" >
-                <!--LOGO TENED--><img alt="logo Tened" src="imagens/logo-tened-branco-roxo.png" class="logo" alt="Logotipo Tened">
+                <!--LOGO TENED--><img alt="logo Tened" src="images/logo-tened-branco-roxo.png" class="logo" alt="Logotipo Tened">
             </div>
             </div>
             <div class="container-sm|md|lg|xl container-fluid mx-auto">
@@ -111,12 +111,12 @@
                 
                             <div class="form-group">
                             <div>
-                                <label alt="preencher nome" for="nome1" type="label"></label>
+                                <label alt="preencher nome" for="nome1" type="label" class="formLabels">Nome</label>
                                 <input name="name" type="text" class="form-control11" id="nome1" placeholder="Nome e Sobrenome*"required style="color: black;"/>
                             </div>
             
                             <div>
-                                <label alt="preencher email" for="exampleInputEmail1" type="label"></label>
+                                <label alt="preencher email" for="exampleInputEmail1" type="label" class="formLabels">Email</label>
                                 <input name="email" type="email" class="form-control22" id="exampleInputEmail1" placeholder="E-mail*"
                                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+.[a-z]{2,}$" required style="color: black;"/>
                             </div>
