é JOHN LENNON, não John Lemos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="col-md-4" id="bglinha">
                     <div id="quadrado">
                         <!--FOTO JOHN--><img alt="foto do colaborador John Lemos" src="images/john.jpg" alt="Avatar" id="imagemavatar">
-                        <h2 id="avatar1">John Lemos</h2>
+                        <h2 id="avatar1">John Lennon</h2>
                         <h3 id="txtavatar1">Inovação e meio ambiente</h3>
                     </div>
                 </div>
