correção no botão do pop up

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             convidado para participar do webinar Caminhos da Educação. 
                         </h2></div>
                         <div id="containerIframe" class="container-sm|md|lg|xl text-center container-fluid p-3">
-                            <iframe id="formulario" width="300px" height="550px" class="col-md-12" src="https://cdn.forms-content.sg-form.com/12ce0a5f-c0b1-11ea-9cd4-12d2b2ca1287"></iframe>
+                            <iframe id="formulario" width="300px" height="560px" class="col-md-12" src="https://cdn.forms-content.sg-form.com/12ce0a5f-c0b1-11ea-9cd4-12d2b2ca1287"></iframe>
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div class=" d-flex justify-content-center"> ;
-                        <button id="botao" class="btn d-block btn-light" onclick="closePopUpAndGoToForm()" href="#void">Quero perder
+                        <button id="botao" class="btn d-block btn-light" onclick="closePopUpAndGoToForm()" href="#void">Não quero perder
                             essa oportunidade</button>
                     </div>
                 </div>
