--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
     </head>
 
     <body>
-
-    <div class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
+        
+        <div class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
+            <div class="container-sm|md|lg|xl container-fluid mx-auto" id=webinar>
+                <button id="botaoWebinar" class="text-center float-right mx-auto" onclick="redirectTo()">Quero Participar</button>
+            </div>
         <div alt="fundo com garoto segurando binóculos" class="bg container-sm|md|lg|xl container-fluid mx-auto" >
             <div class="container-sm|md|lg|xl container-fluid" >
             <div class="container-sm|md|lg|xl container-fluid col-md-12 ml-5 mt-5 mx-auto float-left" >
@@ -154,7 +157,7 @@
                         </div>
                     </div>
                     <div class=" d-flex justify-content-center"> ;
-                        <button id="botao" class="btn d-block btn-light" onclick="closePopUpAndGoToForm()" href="#void">Não quero perder
+                        <button id="botao" class="btn d-block btn-light" onclick="closePopUpAndGoToForm()" href="#formulario">Não quero perder
                             essa oportunidade</button>
                     </div>
                 </div>
