correção do banner

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     <body>
         
         <div class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
-            <div class="container-sm|md|lg|xl container-fluid mx-auto" id=webinar>
-                <button id="botaoWebinar" class="text-center float-right mx-auto" onclick="redirectTo()">Quero Participar</button>
-            </div>
+            <a href="#containerIframe"><img src="images/banner-desktop.jpeg" class="img-fluid mx-auto"></a>
         <div alt="fundo com garoto segurando binóculos" class="bg container-sm|md|lg|xl container-fluid mx-auto" >
             <div class="container-sm|md|lg|xl container-fluid" >
             <div class="container-sm|md|lg|xl container-fluid col-md-12 ml-5 mt-5 mx-auto float-left" >
