correção de acessibilidade

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <body>
         
         <div class="container-sm|md|lg|xl container-fluid mx-auto px-0" id="corpo">
-            <a href="#containerIframe"><img src="images/banner-desktop.jpeg" class="img-fluid mx-auto container-fluid"></a>
+            <a href="#containerIframe"><img alt="clique para ir ao webinar" src="images/banner-desktop.jpeg" class="img-fluid mx-auto container-fluid"></a>
         <div alt="fundo com garoto segurando binóculos" class="bg container-sm|md|lg|xl container-fluid mx-auto" >
             <div class="container-sm|md|lg|xl container-fluid" >
             <div class="container-sm|md|lg|xl container-fluid col-md-12 ml-5 mt-5 mx-auto float-left" >
@@ -107,7 +107,7 @@
                             convidado para participar do webinar Caminhos da Educação. 
                         </h2></div>
                         <div id="containerIframe" class="container-sm|md|lg|xl text-center container-fluid p-3">
-                            <iframe id="formulario" width="300px" height="560px" class="col-md-12" src="https://cdn.forms-content.sg-form.com/12ce0a5f-c0b1-11ea-9cd4-12d2b2ca1287"></iframe>
+                            <iframe title="Formulário de inscrição" id="formulario" width="300px" height="560px" class="col-md-12" src="https://cdn.forms-content.sg-form.com/12ce0a5f-c0b1-11ea-9cd4-12d2b2ca1287"></iframe>
                         </div>
                     </div>
                 </div>
