correção de descrições da equipe

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                     <div id="quadrado">
                         <!--FOTO JOHN--><img alt="foto do colaborador John Lemos" src="images/john.jpg" alt="Avatar" id="imagemavatar">
                         <h2 id="avatar1">John Lennon</h2>
-                        <h3 id="txtavatar1">Inovação e meio ambiente</h3>
+                        <h3 id="txtavatar1">Inovação e Meio ambiente</h3>
                     </div>
                 </div>
                 <div class="col-md-4" id="bglinha">
                     <div id="quadrado">
                         <!--FOTO LUIZ--><img alt="foto do colaborador Luiz Soares" src="images/Luiz-Otávio.jpeg" alt="Avatar" id="imagemavatar">
                         <h2 id="avatar1">Luiz Otávio Nhimi</h2>
-                        <h3 id="txtavatar1">Facilitação e experiência</h3>
+                        <h3 id="txtavatar1">Facilitação e Experiência</h3>
                     </div>
                 </div>
             </div>
