segunda correção de descrição da equipe

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div id="quadrado">
                         <!--FOTO JOHN--><img alt="foto do colaborador John Lemos" src="images/john.jpg" alt="Avatar" id="imagemavatar">
                         <h2 id="avatar1">John Lennon</h2>
-                        <h3 id="txtavatar1">Inovação e Meio ambiente</h3>
+                        <h3 id="txtavatar1">Inovação e Meio Ambiente</h3>
                     </div>
                 </div>
                 <div class="col-md-4" id="bglinha">
