remoção de banner e alteração na posição do botão

--- a/index.html
+++ b/index.html
@@ -41,13 +41,9 @@
     </head>
     <body>
         
-        <section class="container-sm|md|lg|xl container-fluid" id="section1">
-            <!--BANNER TOPO--><img src="images/bannerLanding.jpg" class="img-fluid" id="bannerTopo" alt="banner com botão de redirecionamento">
-            <button id="botaoTopo" class="btn d-block" onclick="redirectTo()">Quero Participar</button>
-        </section>
-        
         <section class="container-sm|md|lg|xl container-fluid" id="section2">
             <!--BANNER WEBINAR--><img src="images/Landing.jpg" id="bannerWebinar" class="img-fluid" alt="fundo roxo com um garoto segurando um binóculo, informações webinar: dia 9, 20 horas">
+            <button id="botaoTopo" class="btn d-block" onclick="redirectTo()">Inscreva-se!!!</button>
         </section>
 
         <section class="container-sm|md|lg|xl container-fluid mx-auto" id="section3">
