link do webinar no ar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <section class="container-sm|md|lg|xl container-fluid" id="section2">
             <!--BANNER WEBINAR--><img src="images/Landing.jpg" id="bannerWebinar" class="img-fluid" alt="fundo roxo com um garoto segurando um binóculo, informações webinar: dia 9, 20 horas">
-            <button id="botaoTopo" class="btn d-block" onclick="redirectTo()">Inscreva-se!!!</button>
+            <button id="botaoTopo" class="btn d-block" onclick="redirectTo()">Clique para acessar!!!</button>
         </section>
 
         <section class="container-sm|md|lg|xl container-fluid mx-auto" id="section3">
@@ -86,10 +86,9 @@
         <section class="container-sm|md|lg|xl container-fluid mx-auto text-center" id="section4">
             <h3 id="somos">Somos motivados pela inovação e você é nosso 
             convidado para participar do webinar Caminhos da Educação</h3>
-        </section>
-
-        <section class="container-sm|md|lg|xl container-fluid mx-auto d-block text-center" id="section4">
-            <iframe title="Formulário de inscrição" id="formulario" width="300px" height="560px" class="col-md-12" src="https://cdn.forms-content.sg-form.com/12ce0a5f-c0b1-11ea-9cd4-12d2b2ca1287"></iframe>
+            <h3 id="estamos" class="mx-auto d-block text-center">Estamos ao vivo!</h3>
+            <h3 id="acesse" class="mx-auto d-block text-center">Acesse agora o link e vem fazer parte de desse debate conosco:</h3>
+            <button id="botaoRedirect" class="btn d-block mx-auto d-block text-center" onclick="redirectTo()">Clique para acessar!!!</button>
         </section>
 
         <footer class="container-sm|md|lg|xl container-fluid row mx-auto text-center" id="footer">
