--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h4 id="direitos">Todos os Direitos Reservados</h4> 
         </footer>
 
-        <!--POP UP EXIT INTENT-->
+        <!--POP UP EXIT INTENT
         <div id="sad-news" class="sad-news-container">
             <div class="container-news">
                 <img class="img-logo m-3" src="images/logo-tened-transp-roxo.png" alt="Logotipo Tened">
@@ -137,7 +137,7 @@
                 </div>
             </div>
         </div>
-        <!--FIM POP UP-->
+        FIM POP UP-->
 
 
     </body>
