--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
         </section>
 
         <section class="container-sm|md|lg|xl container-fluid mx-auto text-center" id="section4">
-            <h3 id="somos">Somos motivados pela inovação e você é nosso 
-            convidado para participar do webinar Caminhos da Educação</h3>
-            <h3 id="estamos" class="mx-auto d-block text-center">Estamos ao vivo!</h3>
-            <h3 id="acesse" class="mx-auto d-block text-center">Acesse agora o link e vem fazer parte de desse debate conosco:</h3>
+            <br>
+            <h3 id="estamos" class="mx-auto d-block text-center">Perdeu a live? Calma, que ainda não acabou!</h3>
+            <br>
+            <h3 id="acesse" class="mx-auto d-block text-center">Você ainda pode conferir na íntegra o que rolou</h3>
+            <br>
             <button id="botaoRedirect" class="btn d-block mx-auto d-block text-center" onclick="redirectTo()">Clique para acessar!!!</button>
         </section>
 
