atualização page pós live

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
         <section class="container-sm|md|lg|xl container-fluid mx-auto text-center" id="section4">
             <br>
-            <h3 id="estamos" class="mx-auto d-block text-center">Perdeu a live? Calma, que ainda não acabou!</h3>
+            <h3 id="estamos" class="mx-auto d-block text-center">Perdeu a live? Calma, ainda não acabou!</h3>
             <br>
-            <h3 id="acesse" class="mx-auto d-block text-center">Você ainda pode conferir na íntegra o que rolou</h3>
+            <h3 id="acesse" class="mx-auto d-block text-center">Você ainda pode conferir na íntegra o que rolou:</h3>
             <br>
             <button id="botaoRedirect" class="btn d-block mx-auto d-block text-center" onclick="redirectTo()">Clique para acessar!!!</button>
         </section>
